# rAIght.move-analysis

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt
configs/: config.yaml  exercises_table.yaml  phases_table.yaml  pose_estimators.yaml  reference_tables.yaml  segmentation.yaml
data/RMD/: metadata_label.csv  metadata_repetition.csv
data/RMD/angles/: vid_001_angles.csv  vid_002_angles.csv  vid_003_angles.csv  vid_004_angles.csv  vid_005_angles.csv  vid_006_angles.csv  vid_007_angles.csv  vid_008_angles.csv  vid_009_angles.csv  vid_010_angles.csv  (+38 more)
move_raight/app/: base.py  live_analysis.py  video_analysis.py
move_raight/exercises/: base.py  plank.py
move_raight/models/: mistake.py  result.py  segment.py  state.py
move_raight/processors/: angles_processor.py  base.py  joints_processor.py  results_processor.py  segments_processor.py
move_raight/utils/: dtw.py  repetitions_counter.py  visualizer.py
notebooks/: data_preprocessing.ipynb  dynamic_time_warping.ipynb  errors_threshold.ipynb  evaluation.ipynb  other_segmentation_techniques.ipynb  reference_squat_video_analysis.ipynb
raight_move/app/: __init__.py  base.py  live_analysis.py  video_analysis.py
raight_move/models/: angle.py  joint.py  result.py
raight_move/processors/: angles_processor.py  base.py  joints_processor.py  results_processor.py  segments_processor.py
raight_move/utils/: dtw.py  repetitions_counter.py  visualizer.py
results/: 2023-12-22_22:09:19
scripts/: cli.py  labeling_app.py
src/: cli.py
src/app/: abstract_app.py  app.py  base.py  live_analysis.py  video_analysis.py
src/models/: mistake.py
src/processors/: abstract_handler.py  abstract_processor.py  angle_handler.py  angles_processor.py  base.py  joint_handler.py  joints_processor.py  mistakes_processor.py  repetitions_processor.py  results_processor.py  segments_processor.py
src/time_series/: dtw.py
src/utils/: dtw.py  joints_data_handler.py  repetitions_counter.py  visualizer.py
(+84 files in other folders)
